# disc_bot

./: .gitignore  README.md  flake.nix  makefile  pyproject.toml  requirements.txt  ruff_defaults.toml  setup.py
.github/workflows/: main.yml  tests.yml
disc_bot/: utils.py
disc_bot/bot/: main.py
disc_bot/cli/: run_bot.py
disc_bot/cog_helpers/: message_history.py  player.py  server_containers.py  state_machine.py  translator.py
disc_bot/cogs/: 1q  AdminCog.py  BidCog.py  BlankCog.py  CheckCog.py  ErrorCog.py  EventCog.py  RankCog.py  RouletteCog.py  ScoreCog.py  TranslatorCog.py  __init__.py
disc_bot/config/: globals.py  output_level_1.cfg  output_level_2.cfg  output_level_3.cfg  output_level_4.cfg  output_level_5.cfg
disc_bot/exceptions/: common.py  handling.py  ranks.py  translator.py
disc_bot/loader/: metadata.py
disc_bot/server_data/: __init__.py
disc_bot/tests/bot_tests/: test_admin_roles.py  test_bot_async.py  test_bot_translates.py
disc_bot/tests/unit_tests/: test_global_config.py  test_player.py  test_server_container.py  test_translation.py
